fix alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -20,11 +20,12 @@ html {
   
   .header-logo {
     width: 200px;
+    margin-top: 15px; /* Adjusted margin-top to raise the logo slightly */
   }
   
   .logo-container {
     display: flex;
-    align-items: center; /* Adjusted alignment to center the logo vertically */
+    align-items: center;
   }
   
   nav ul {
@@ -85,7 +86,7 @@ html {
     margin: 0 10px;
     text-decoration: none;
     color: black;
-  }  
+  }
   
   .img + .img {
     margin-top: 50px; /* Adjust the value to your preference */
